# group-organizer

./: Cargo.toml  Changes.md  README.md  index.html  old.html  sample_ap_seminar_data.json  test.py
.github/workflows/: build.yml
src/: colors.rs  dlx.rs  exact_cover.rs  flow.rs  main.rs  mod.rs  permutations.rs  types.rs  version.rs
