[package]
name = "group-organizer-app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = "0.12.5"
axum-macros = "0.5.0"
itertools = "0.14.0"
serde = {version = "1.0.218", features = ["derive"]}
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
webbrowser = "1.0.3"
